patch: 🩹 fix max height on card showing on mobile devices

--- a/src/styles/components/Card.scss
+++ b/src/styles/components/Card.scss
@@ -86,6 +86,7 @@
   .card {
     display: inline-block;
     height: auto;
+    max-height: none;
   }
 
   .card--image {
